Avoid duplicates in required `--add-opens` Gradle JVM args
This makes more sense if the user needs to match the args for the
launcher JVM, e.g. by providing GRADLE_OPTS

Signed-off-by: Adam <897017+aSemy@users.noreply.github.com>